--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.15",
     "@iconify/react": "^5.2.0",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
