--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "aspects3",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@ariakit/react": "^0.4.15",
-    "@fontsource-variable/quicksand": "^5.1.1",
-    "@iconify/react": "^5.2.0",
-    "@react-router/node": "^7.1.3",
-    "@react-router/serve": "^7.1.3",
-    "arktype": "^2.0.2",
-    "es-toolkit": "^1.31.0",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.1.3",
-    "use-debounce": "^10.0.4"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.1.3",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+	"name": "aspects3",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "react-router build",
+		"dev": "react-router dev",
+		"start": "react-router-serve ./build/server/index.js",
+		"typecheck": "react-router typegen && tsc"
+	},
+	"dependencies": {
+		"@ariakit/react": "^0.4.15",
+		"@fontsource-variable/quicksand": "^5.1.1",
+		"@iconify/react": "^5.2.0",
+		"@react-router/node": "^7.1.3",
+		"@react-router/serve": "^7.1.3",
+		"@tailwindcss/typography": "^0.5.16",
+		"arktype": "^2.0.2",
+		"es-toolkit": "^1.31.0",
+		"isbot": "^5.1.17",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-router": "^7.1.3",
+		"use-debounce": "^10.0.4"
+	},
+	"devDependencies": {
+		"@mdx-js/rollup": "^3.1.0",
+		"@react-router/dev": "^7.1.3",
+		"@tailwindcss/vite": "^4.0.0",
+		"@types/mdx": "^2.0.13",
+		"@types/node": "^20",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.1",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.7.2",
+		"vite": "^5.4.11",
+		"vite-tsconfig-paths": "^5.1.4"
+	}
 }
