--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@mdx-js/rollup": "^3.1.0",
+		"@netlify/vite-plugin-react-router": "^1.0.0",
 		"@react-router/dev": "^7.1.3",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/mdx": "^2.0.13",
