--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
 		"build": "react-router build",
-		"dev": "react-router dev",
+		"dev": "convex dev --until-success && run-p --race \"dev:*\"",
+		"dev:app": "react-router dev",
+		"dev:convex": "convex dev",
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc"
 	},
@@ -17,6 +19,7 @@
 		"@react-router/serve": "^7.1.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"arktype": "^2.0.2",
+		"convex": "^1.18.2",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
 		"react": "^19.0.0",
@@ -34,6 +37,7 @@
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
 		"autoprefixer": "^10.4.20",
+		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.7.2",
