--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"**/.client/**/*",
 		".react-router/types/**/*"
 	],
+	"exclude": ["**/node_modules", "build"],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
 		"types": ["node", "vite/client"],
