--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.1.3",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
 		"use-debounce": "^10.0.4"
 	},
 	"devDependencies": {
