--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
 	],
 	"exclude": ["**/node_modules", "build"],
 	"compilerOptions": {
-		"lib": ["DOM", "DOM.Iterable", "ES2022"],
+		"lib": ["DOM", "DOM.Iterable", "ES2024"],
 		"types": ["node", "vite/client"],
-		"target": "ES2022",
-		"module": "ES2022",
+		"target": "ES2024",
+		"module": "Preserve",
 		"moduleResolution": "bundler",
 		"jsx": "react-jsx",
 		"rootDirs": [".", "./.react-router/types"],
