--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@react-router/node": "^7.1.3",
 		"@react-router/serve": "^7.1.3",
 		"@tailwindcss/typography": "^0.5.16",
+		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
@@ -23,6 +24,7 @@
 		"react-router": "^7.1.3",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^7.4.5-canary.8a46260",
 		"use-debounce": "^10.0.4"
 	},
 	"devDependencies": {
