--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "aspects3",
 	"private": true,
 	"type": "module",
+"packageManager": "bun@1.2.2",
 	"scripts": {
 		"build": "react-router build",
 		"dev": "react-router dev",
