--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
 		"postcss": "^8.4.49",
+		"remark-gfm": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.7.2",
 		"vite": "^5.4.11",
