--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
 	"packageManager": "bun@1.2.2",
 	"scripts": {
 		"build": "react-router build",
-		"dev": "react-router dev",
+		"dev": "run-p --print-label --race 'dev:*'",
+		"dev:app": "react-router dev",
+		"dev:bot": "bun --watch app/bot.entry.ts",
 		"preview": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc"
+		"typecheck": "prisma generate && react-router typegen && tsc",
+		"db:push": "prisma db push"
 	},
 	"dependencies": {
 		"@ariakit/react": "^0.4.15",
 		"@fontsource-variable/quicksand": "^5.1.1",
 		"@iconify/react": "^5.2.0",
+		"@prisma/client": "^6.3.1",
 		"@react-router/node": "^7.1.3",
 		"@react-router/serve": "^7.1.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
+		"discord.js": "^14.17.3",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
+		"match-sorter": "^8.0.0",
+		"pino": "^9.6.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.1.3",
@@ -34,13 +41,17 @@
 		"@netlify/vite-plugin-react-router": "^1.0.0",
 		"@react-router/dev": "^7.1.3",
 		"@tailwindcss/vite": "^4.0.0",
+		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "^20",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
+		"npm-run-all": "^4.1.5",
+		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
+		"prisma": "^6.3.1",
 		"remark-gfm": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.7.2",
