--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@react-router/dev": "^7.1.3",
 		"@tailwindcss/vite": "^4.0.0",
 		"@total-typescript/ts-reset": "^0.6.1",
+		"@types/bun": "^1.2.2",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "^20",
 		"@types/react": "^19.0.1",
@@ -54,6 +55,7 @@
 		"prisma": "^6.3.1",
 		"remark-gfm": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"type-fest": "^4.33.0",
 		"typescript": "^5.7.2",
 		"vite": "^5.4.11",
 		"vite-plugin-babel": "^1.3.0",
