--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"dev": "run-p --print-label --race 'dev:*'",
 		"dev:app": "react-router dev",
 		"dev:bot": "bun --watch app/bot.entry.ts",
+		"dev:test": "bun test --watch",
 		"preview": "react-router-serve ./build/server/index.js",
 		"typecheck": "prisma generate && react-router typegen && tsc",
-		"db:push": "prisma db push"
+		"db:push": "prisma db push",
+		"test": "bun test --coverage"
 	},
 	"dependencies": {
 		"@ariakit/react": "^0.4.15",
