--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"packageManager": "bun@1.2.2",
 	"scripts": {
-		"build": "react-router build",
+		"build": "prisma generate && react-router build",
 		"dev": "run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
 		"dev:bot": "bun --watch app/bot.entry.ts",
@@ -24,19 +24,18 @@
 		"@prisma/client": "^6.3.1",
 		"@react-router/node": "^7.1.3",
 		"@react-router/serve": "^7.1.3",
-		"@tailwindcss/typography": "^0.5.16",
 		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
 		"discord.js": "^14.17.3",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
 		"match-sorter": "^8.0.0",
+		"npm-run-all": "^4.1.5",
 		"pino": "^9.6.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.1.3",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^7.4.5-canary.8a46260",
 		"use-debounce": "^10.0.4"
 	},
@@ -52,9 +51,10 @@
 		"@types/node": "^20",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
+		"@tailwindcss/typography": "^0.5.16",
+		"tailwindcss-animate": "^1.0.7",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
-		"npm-run-all": "^4.1.5",
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
 		"prisma": "^6.3.1",
