--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 	"packageManager": "bun@1.2.2",
 	"scripts": {
 		"build": "prisma generate && react-router build",
-		"dev": "run-p --race 'dev:*'",
+		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
 		"dev:bot": "bun --watch app/bot.entry.ts",
 		"dev:test": "bun test --watch",
+		"dev:convex": "convex dev --tail-logs",
 		"preview": "bun start:app",
 		"start": "run-p --race 'start:*'",
 		"start:app": "react-router-serve ./build/server/index.js",
@@ -19,6 +20,7 @@
 	},
 	"dependencies": {
 		"@ariakit/react": "^0.4.15",
+		"@convex-dev/auth": "^0.0.80",
 		"@fontsource-variable/quicksand": "^5.1.1",
 		"@iconify/react": "^5.2.0",
 		"@prisma/client": "^6.3.1",
@@ -26,6 +28,7 @@
 		"@react-router/serve": "^7.1.3",
 		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
+		"convex": "^1.19.0",
 		"discord.js": "^14.17.3",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
