--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
 		"convex": "^1.19.0",
+		"convex-helpers": "^0.1.71",
 		"discord.js": "^14.17.3",
 		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
@@ -40,7 +41,8 @@
 		"react-router": "^7.1.3",
 		"tailwind-merge": "^3.0.1",
 		"uploadthing": "^7.4.5-canary.8a46260",
-		"use-debounce": "^10.0.4"
+		"use-debounce": "^10.0.4",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.26.0",
