--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"packageManager": "bun@1.2.2",
 	"scripts": {
-		"build": "prisma generate && react-router build",
+		"build": "react-router build",
 		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
 		"dev:bot": "bun --watch app/bot.entry.ts",
@@ -14,9 +14,8 @@
 		"start": "run-p --race 'start:*'",
 		"start:app": "react-router-serve ./build/server/index.js",
 		"start:bot": "bun app/bot.entry.ts",
-		"db:push": "prisma db push",
 		"test": "bun test --coverage",
-		"typecheck": "prisma generate && react-router typegen && tsc"
+		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
 		"@ariakit/react": "^0.4.15",
@@ -24,7 +23,6 @@
 		"@convex-dev/auth": "^0.0.80",
 		"@fontsource-variable/quicksand": "^5.1.1",
 		"@iconify/react": "^5.2.0",
-		"@prisma/client": "^6.3.1",
 		"@react-router/node": "^7.1.3",
 		"@react-router/serve": "^7.1.3",
 		"@uploadthing/react": "^7.1.5",
@@ -63,7 +61,6 @@
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
-		"prisma": "^6.3.1",
 		"remark-gfm": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"type-fest": "^4.33.0",
