--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"packageManager": "bun@1.2.2",
 	"engines": {
-		"node": "22"
+		"node": "22 || 23"
 	},
 	"scripts": {
 		"build": "react-router build",
