--- a/package.json
+++ b/package.json
@@ -52,23 +52,24 @@
 		"@mdx-js/rollup": "^3.1.0",
 		"@netlify/vite-plugin-react-router": "^1.0.0",
 		"@react-router/dev": "^7.1.3",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.2",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "^20",
+		"@types/node": "^22",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
-		"@tailwindcss/typography": "^0.5.16",
-		"tailwindcss-animate": "^1.0.7",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
+		"convex-test": "^0.0.35",
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
 		"remark-gfm": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"tailwindcss-animate": "^1.0.7",
 		"type-fest": "^4.33.0",
-		"typescript": "^5.7.2",
+		"typescript": "5.7.2",
 		"vite": "^5.4.11",
 		"vite-plugin-babel": "^1.3.0",
 		"vite-tsconfig-paths": "^5.1.4"
