--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
 		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
 		"dev:bot": "bun --watch app/bot.entry.ts",
-		"dev:test": "bun test --watch",
+		"dev:test": "bun test app convex --watch",
 		"dev:convex": "convex dev --tail-logs",
 		"preview": "bun start:app",
 		"start": "run-p --race 'start:*'",
-		"start:app": "react-router-serve ./build/server/index.js",
+		"start:app": "PORT=5173 react-router-serve ./build/server/index.js",
 		"start:bot": "bun app/bot.entry.ts",
-		"test": "bun test --coverage",
+		"test": "bun test app convex --coverage",
 		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
@@ -51,6 +51,7 @@
 		"@babel/preset-typescript": "^7.26.0",
 		"@mdx-js/rollup": "^3.1.0",
 		"@netlify/vite-plugin-react-router": "^1.0.0",
+		"@playwright/test": "^1.50.1",
 		"@react-router/dev": "^7.1.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
