--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@babel/preset-typescript": "^7.26.0",
 		"@mdx-js/rollup": "^3.1.0",
 		"@netlify/vite-plugin-react-router": "^1.0.0",
+		"@openrouter/ai-sdk-provider": "^0.2.1",
 		"@playwright/test": "^1.50.1",
 		"@react-router/dev": "^7.1.3",
 		"@tailwindcss/typography": "^0.5.16",
@@ -61,9 +62,11 @@
 		"@types/node": "^22",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
+		"ai": "^4.1.28",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
 		"convex-test": "^0.0.35",
+		"dotenv": "^16.4.7",
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
 		"remark-gfm": "^4.0.0",
