--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@netlify/vite-plugin-react-router": "^1.0.0",
 		"@playwright/test": "^1.50.1",
 		"@react-router/dev": "^7.1.3",
+		"@react-router/remix-routes-option-adapter": "^7.1.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"@total-typescript/ts-reset": "^0.6.1",
@@ -67,6 +68,7 @@
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
 		"remark-gfm": "^4.0.0",
+		"remix-flat-routes": "^0.8.4",
 		"tailwindcss": "^4.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"type-fest": "^4.33.0",
