--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
 		"convex-test": "^0.0.35",
 		"pino-pretty": "^13.0.0",
 		"postcss": "^8.4.49",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
 		"remark-gfm": "^4.0.0",
 		"remix-flat-routes": "^0.8.4",
 		"tailwindcss": "^4.0.0",
