--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "22 || 23"
 	},
 	"scripts": {
-		"build": "node scripts/generate-guidebook-pdf.ts && react-router build",
+		"build": "tsx scripts/generate-guidebook-pdf.ts && react-router build",
 		"deploy": "convex deploy --cmd \"bun run build\"",
 		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
@@ -73,6 +73,7 @@
 		"remix-flat-routes": "^0.8.4",
 		"tailwindcss": "^4.0.0",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.19.2",
 		"type-fest": "^4.33.0",
 		"typescript": "5.7.2",
 		"vite": "^6.1.0",
