--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
 		"convex-test": "^0.0.35",
 		"pino-pretty": "^13.0.0",
+		"playwright": "^1.50.1",
 		"postcss": "^8.4.49",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
