--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
 		"vite": "^6.1.0",
 		"vite-plugin-babel": "^1.3.0",
 		"vite-tsconfig-paths": "^5.1.4"
-	}
+	},
+	"trustedDependencies": [
+		"@playwright/browser-chromium"
+	]
 }
