--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"start:app": "PORT=5173 react-router-serve ./build/server/index.js",
 		"start:bot": "bun app/bot.entry.ts",
 		"test": "bun test app convex --coverage",
-		"typecheck": "react-router typegen && tsc"
+		"typecheck": "react-router typegen && tsc",
+		"format": "prettier --write --list-different ."
 	},
 	"dependencies": {
 		"@ariakit/react": "^0.4.15",
@@ -69,6 +70,9 @@
 		"pino-pretty": "^13.0.0",
 		"playwright": "^1.50.1",
 		"postcss": "^8.4.49",
+		"prettier": "^3.5.0",
+		"prettier-plugin-jsdoc": "^1.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"remark-gfm": "^4.0.0",
