--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.1.5",
+		"space-slug": "^2.1.0",
 		"tailwind-merge": "^3.0.1",
 		"uploadthing": "^7.4.5-canary.8a46260",
 		"use-debounce": "^10.0.4",
