--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
+[phases.install]
+cmds = ['bun install --filter "./workspaces/web"']
+
 [phases.build]
 cmds = []
 
 [start]
-cmd = 'bun run --filter @workspace/web start:bot'
+cmd = 'bun run --filter "./workspaces/web" start:bot'
