--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -11,13 +11,9 @@
 		"deploy": "convex deploy --cmd \"bun run build\"",
 		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
-		"dev:bot": "bun --watch app/bot.entry.ts",
-		"dev:test": "bun test app convex --watch",
 		"dev:convex": "convex dev --tail-logs",
-		"preview": "bun start:app",
-		"start": "run-p --race 'start:*'",
-		"start:app": "PORT=5173 react-router-serve ./build/server/index.js",
-		"start:bot": "bun app/bot.entry.ts",
+		"preview": "bun start",
+		"start": "PORT=5173 react-router-serve ./build/server/index.js",
 		"test": "run-s 'test:*'",
 		"test:unit": "bun test app convex --coverage",
 		"test:e2e": "playwright test",
@@ -37,7 +33,6 @@
 		"convex": "^1.19.0",
 		"convex-helpers": "^0.1.71",
 		"discord.js": "^14.17.3",
-		"es-toolkit": "^1.31.0",
 		"isbot": "^5.1.17",
 		"match-sorter": "^8.0.0",
 		"npm-run-all": "^4.1.5",
@@ -61,10 +56,7 @@
 		"@react-router/remix-routes-option-adapter": "^7.1.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
-		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.2",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "^22",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
 		"autoprefixer": "^10.4.20",
