--- a/workspaces/web/tsconfig.json
+++ b/workspaces/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@workspace/shared/tsconfig.json",
+	"extends": "../shared/tsconfig.json",
 	"exclude": ["**/node_modules", "build"],
 	"compilerOptions": {
 		"rootDirs": [".", "./.react-router/types"],
