--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
 		"format": "prettier --write --list-different ."
 	},
 	"devDependencies": {
+		"@total-typescript/ts-reset": "^0.6.1",
+		"@types/bun": "^1.2.2",
+		"@types/node": "^22",
 		"prettier": "^3.5.0",
 		"prettier-plugin-jsdoc": "^1.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"typescript": "5.7.2"
+		"typescript": "5.7.2",
+		"es-toolkit": "^1.31.0",
+		"type-fest": "^4.33.0"
 	}
 }
