--- a/workspaces/shared/package.json
+++ b/workspaces/shared/package.json
@@ -3,8 +3,8 @@
 	"private": true,
 	"type": "module",
 	"packageManager": "bun@1.2.2",
-	"engines": {
-		"node": "22 || 23"
+	"exports": {
+		"./*": "./src/*.ts"
 	},
 	"scripts": {},
 	"dependencies": {},
