--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"typecheck": "bun run --filter '*' typecheck",
 		"format": "prettier --write --list-different ."
 	},
+	"dependencies": {
+		"es-toolkit": "^1.31.0"
+	},
 	"devDependencies": {
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.2",
@@ -24,7 +27,6 @@
 		"prettier-plugin-jsdoc": "^1.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"typescript": "5.7.2",
-		"es-toolkit": "^1.31.0",
 		"type-fest": "^4.33.0"
 	}
 }
