--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -59,6 +59,7 @@
 		"@types/mdx": "^2.0.13",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
+		"@uploadthing/shared": "^7.1.6",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
 		"convex-test": "^0.0.35",
