--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -53,7 +53,7 @@
 		"@playwright/browser-chromium": "^1.50.1",
 		"@playwright/test": "^1.50.1",
 		"@react-router/dev": "^7.1.5",
-		"@react-router/remix-routes-option-adapter": "^7.1.5",
+		"@react-router/fs-routes": "^7.1.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/mdx": "^2.0.13",
@@ -69,7 +69,6 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"remark-gfm": "^4.0.0",
-		"remix-flat-routes": "^0.8.4",
 		"tailwindcss": "^4.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.19.2",
