--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -7,7 +7,7 @@
 		"node": "22 || 23"
 	},
 	"scripts": {
-		"build": "tsx scripts/generate-guidebook-pdf.ts && react-router build",
+		"build": "react-router build",
 		"deploy": "convex deploy --cmd \"bun run build\"",
 		"dev": "convex dev --until-success && run-p --race 'dev:*'",
 		"dev:app": "react-router dev",
