new backend workspace + stub data workspace

--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -8,10 +8,7 @@
 	},
 	"scripts": {
 		"build": "react-router build",
-		"deploy": "convex deploy --cmd \"bun run build\"",
-		"dev": "convex dev --until-success && run-p --race 'dev:*'",
-		"dev:app": "react-router dev",
-		"dev:convex": "convex dev --tail-logs",
+		"dev": "react-router dev",
 		"preview": "bun start",
 		"start": "PORT=5173 react-router-serve ./build/server/index.js",
 		"test": "run-s 'test:*'",
@@ -29,6 +26,8 @@
 		"@iconify/react": "^5.2.0",
 		"@react-router/node": "^7.1.5",
 		"@react-router/serve": "^7.1.5",
+		"@workspace/backend": "*",
+		"@workspace/data": "*",
 		"@workspace/shared": "*",
 		"@uploadthing/react": "^7.1.5",
 		"arktype": "^2.0.2",
