--- a/workspaces/bot/package.json
+++ b/workspaces/bot/package.json
@@ -13,8 +13,9 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@workspace/backend": "*",
+		"@workspace/data": "*",
 		"@workspace/shared": "*",
-		"@workspace/web": "*",
 		"convex": "^1.19.0",
 		"discord.js": "^14.17.3",
 		"match-sorter": "^8.0.0",
