--- a/workspaces/shared/tsconfig.json
+++ b/workspaces/shared/tsconfig.json
@@ -7,7 +7,7 @@
 		"moduleResolution": "bundler",
 		"jsx": "react-jsx",
 		"esModuleInterop": true,
-		"verbatimModuleSyntax": true,
+		// "verbatimModuleSyntax": true,
 		"noEmit": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
