move game data stuff to data workspace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
 	"references": [
 		{ "path": "workspaces/web" },
 		{ "path": "workspaces/bot" },
-		{ "path": "workspaces/shared" }
+		{ "path": "workspaces/shared" },
+		{ "path": "workspaces/data" },
+		{ "path": "workspaces/backend" }
 	]
 }
