--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.2",
 		"@types/node": "^22",
+		"arktype": "2.1.0",
 		"prettier": "^3.5.0",
 		"prettier-plugin-jsdoc": "^1.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
