reading selected items in owlbear

--- a/workspaces/web/package.json
+++ b/workspaces/web/package.json
@@ -24,12 +24,13 @@
 		"@fontsource-variable/quicksand": "^5.1.1",
 		"@formkit/auto-animate": "^0.8.2",
 		"@iconify/react": "^5.2.0",
+		"@owlbear-rodeo/sdk": "^3.1.0",
 		"@react-router/node": "^7.1.5",
 		"@react-router/serve": "^7.1.5",
+		"@uploadthing/react": "^7.1.5",
 		"@workspace/backend": "*",
 		"@workspace/data": "*",
 		"@workspace/shared": "*",
-		"@uploadthing/react": "^7.1.5",
 		"convex": "^1.19.0",
 		"convex-helpers": "^0.1.71",
 		"discord.js": "^14.17.3",
