--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"prettier": "^3.5.0",
 		"prettier-plugin-jsdoc": "^1.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"typescript": "5.7.2",
+		"typescript": "~5.4",
 		"type-fest": "^4.33.0"
 	}
 }
