--- a/workspaces/shared/tsconfig.json
+++ b/workspaces/shared/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"exclude": ["**/node_modules"],
 	"compilerOptions": {
-		"lib": ["DOM", "DOM.Iterable", "ES2024"],
-		"target": "ES2023",
+		"lib": ["DOM", "DOM.Iterable", "es2022"],
+		"target": "es2022",
 		"module": "Preserve",
 		"moduleResolution": "bundler",
 		"jsx": "react-jsx",
